--- a/dev/js/gutenberg_blocks/hero/hero.scss
+++ b/dev/js/gutenberg_blocks/hero/hero.scss
@@ -63,7 +63,9 @@
                     display: flex;
                     flex-direction: row;
                     align-items: flex-end;
-
+                    .wp-block-button {
+                        margin-right: 10px;
+                    }
                 }
                 i{
                     font-size: 0.8em;
