--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -606,5 +606,5 @@ input:focus-visible {
     padding: 0 !important;
 }
 .exm-menu-cart{
-    margin-top: -5px;
+    margin-top: -5px !important;
 }
