--- a/dev/js/gutenberg_blocks/hero/hero.scss
+++ b/dev/js/gutenberg_blocks/hero/hero.scss
@@ -43,7 +43,31 @@
                 font-size: 45px;
             }
         }
-
+        .left {
+            display: flex;
+            align-content: flex-end;
+            .wp-block-buttons {
+                display: flex;
+                flex-direction: row;
+                align-items: flex-end;
+                .wp-block-button {
+                    margin-right: 10px;
+                }
+            }
+            i{
+                font-size: 0.8em;
+                transform: translateY(-2px);
+                vertical-align: middle;
+            }
+            img{
+                max-height: 70px;
+                @media screen and (max-width : 768px) {
+                    max-height: 50px;
+                    margin-top:15px
+                    
+                }
+            }
+        }
         .bottom{
             width: 100%;
             align-self: flex-end;
@@ -56,7 +80,7 @@
                 flex-direction: column;
                 padding-bottom:20px;
             }
-            .left,.right {
+            .right {
                 display: flex;
                 align-content: flex-end;
                 .wp-block-buttons {
