--- a/dev/sass/05-forms/_fields.scss
+++ b/dev/sass/05-forms/_fields.scss
@@ -25,7 +25,7 @@ textarea {
 }
 
 @include placeholder{
-    color: lighten($color__text-input, 20%);
+    color: $color__text-input;
 }
 
 textarea {
