logo and border bottom

--- a/dev/sass/site/primary/_header.scss
+++ b/dev/sass/site/primary/_header.scss
@@ -316,13 +316,20 @@
 	height: 10rem;
 	transition: height 0.25s;
 }
-
-body:not(.scrolled){
-	.tax-product_cat{
-		#masthead{
-			border-bottom: none;
+.tax-product_cat{
+	#masthead{
+		border-bottom: none;
+		.site-branding {
+			a {
+				img{
+					filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(500%) contrast(0%) brightness(500%);
+				}
+			}
 		}
 	}
+}
+
+body:not(.scrolled){
 	#masthead{
 		
 		#site-header-cart{
@@ -343,7 +350,7 @@ body:not(.scrolled){
 		.site-branding {
 			a {
 				img{
-					filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(500%) contrast(0%) brightness(500%);
+					filter: brightness(5000%) contrast(0) brightness(5000%);
 				}
 			}
 		}
