color mistake solveed logo

--- a/dev/sass/site/primary/_header.scss
+++ b/dev/sass/site/primary/_header.scss
@@ -322,7 +322,7 @@
 		.site-branding {
 			a {
 				img{
-					filter: brightness() contrast(0) brightness();
+					filter: brightness(0%) contrast(0%) brightness(0%);
 				}
 			}
 		}
