--- a/dev/sass/shop/_my-account.scss
+++ b/dev/sass/shop/_my-account.scss
@@ -194,3 +194,7 @@
         }
     }
 }
+
+.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--mes-favoris {
+    display: none;
+}
