--- a/dev/sass/style.css
+++ b/dev/sass/style.css
@@ -631,13 +631,13 @@ textarea {
     color: #111; }
 
 ::-webkit-input-placeholder {
-  color: #999999; }
+  color: #000; }
 :-moz-placeholder {
-  color: #999999; }
+  color: #000; }
 ::-moz-placeholder {
-  color: #999999; }
+  color: #000; }
 :-ms-input-placeholder {
-  color: #999999; }
+  color: #000; }
 textarea {
   width: 100%;
   resize: vertical; }
@@ -1602,6 +1602,8 @@ span.label-new {
               border-top: 1px solid #000000;
               padding-right: 20px;
               flex-direction: column; } }
+          #masthead .nav-wrapper #site-navigation > div > ul > .header_top_search {
+            margin-top: -2px; }
           #masthead .nav-wrapper #site-navigation > div > ul > li {
             position: relative;
             box-sizing: border-box;
@@ -1629,7 +1631,7 @@ span.label-new {
             #masthead .nav-wrapper #site-navigation > div > ul > li.menu-item-has-children > a:after {
               content: "\f107";
               font-size: 1.6rem;
-              font-family: "Font Awesome 5 Pro";
+              font-family: "Font Awesome 6 Pro";
               padding-left: 0.2rem;
               vertical-align: text-top;
               line-height: 1.3em; }
@@ -1709,10 +1711,15 @@ span.label-new {
   height: 10rem;
   transition: height 0.25s; }
 
-body:not(.scrolled) #masthead #site-header-cart .woocommerce-mini-cart-item a {
-  color: #000; }
-  body:not(.scrolled) #masthead #site-header-cart .woocommerce-mini-cart-item a:hover {
-    color: #E30613; }
+body:not(.scrolled).tax-product_cat #masthead .site-branding a img {
+  filter: brightness(0%) contrast(0%) brightness(0%); }
+
+body:not(.scrolled) #masthead {
+  border-bottom: none; }
+  body:not(.scrolled) #masthead #site-header-cart .woocommerce-mini-cart-item a {
+    color: #000; }
+    body:not(.scrolled) #masthead #site-header-cart .woocommerce-mini-cart-item a:hover {
+      color: #E30613; }
 body:not(.scrolled) #masthead.white {
   border-bottom: 1px solid #ffffff; }
   body:not(.scrolled) #masthead.white .site-branding a img {
